--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:importantForAccessibility="yes"
+    android:focusable="false"
     android:orientation="vertical">
 
     <EditText
@@ -23,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="-8dp"
+        android:focusable="false"
         android:orientation="horizontal"
         android:gravity="center_vertical">
 
@@ -42,6 +44,7 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:padding="4dp"
+            android:focusable="true"
             android:background="@mipmap/add_view"/>
     </LinearLayout>
 
