--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -9,11 +9,14 @@
     <EditText
         android:id="@+id/et_title"
         android:layout_width="wrap_content"
-        android:layout_height="24dp"
+        android:maxWidth="200dp"
+        android:layout_height="wrap_content"
         android:background="@color/transparent"
         android:gravity="bottom"
         android:includeFontPadding="false"
         android:minEms="3"
+        android:maxLines="60"
+        android:inputType="textMultiLine"
         android:paddingLeft="10dp"
         android:paddingRight="36dp"
         android:singleLine="true"
