--- a/app/src/main/res/layout/item_node.xml
+++ b/app/src/main/res/layout/item_node.xml
@@ -2,53 +2,68 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:importantForAccessibility="yes"
     android:focusable="false"
+    android:importantForAccessibility="yes"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/et_title"
         android:layout_width="wrap_content"
-        android:maxWidth="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="24dp"
         android:background="@color/transparent"
         android:gravity="bottom"
         android:includeFontPadding="false"
         android:minEms="3"
-        android:maxLines="60"
-        android:inputType="textMultiLine"
         android:paddingLeft="10dp"
         android:paddingRight="36dp"
         android:singleLine="true"
         android:text=""
         android:textSize="22sp" />
+    <!--    <EditText-->
+    <!--        android:id="@+id/et_title"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:maxWidth="200dp"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:background="@color/transparent"-->
+    <!--        android:gravity="bottom"-->
+    <!--        android:includeFontPadding="false"-->
+    <!--        android:minEms="3"-->
+    <!--        android:maxLines="60"-->
+    <!--        android:inputType="textMultiLine"-->
+    <!--        android:paddingLeft="10dp"-->
+    <!--        android:paddingRight="36dp"-->
+    <!--        android:singleLine="true"-->
+    <!--        android:text=""-->
+    <!--        android:textSize="22sp" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="16dp"
         android:layout_marginTop="-8dp"
         android:focusable="false"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <View
             android:id="@+id/line"
             android:layout_width="match_parent"
-            android:layout_weight="1"
             android:layout_height="1dp"
+            android:layout_weight="1"
             android:background="@color/chelsea_cucumber" />
+
         <View
             android:id="@+id/line_2"
             android:layout_width="8dp"
             android:layout_height="0.5dp"
             android:background="@color/chelsea_cucumber" />
+
         <ImageView
             android:id="@+id/tv_add"
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:padding="4dp"
+            android:background="@mipmap/add_view"
             android:focusable="true"
-            android:background="@mipmap/add_view"/>
+            android:padding="4dp" />
     </LinearLayout>
 
 </LinearLayout>
