增加分享预览，重构底部弹框，修复删除节点跳变问题，修改二三节点字体和底部线条大小问题等

--- a/app/src/main/res/layout/fragment_file_list.xml
+++ b/app/src/main/res/layout/fragment_file_list.xml
@@ -22,6 +22,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:padding="4dp"
+        android:visibility="gone"
         android:background="@drawable/top_circle"
         android:gravity="center_horizontal"
         android:layout_marginEnd="30dp"
