--- a/app/src/main/res/layout/pop_share.xml
+++ b/app/src/main/res/layout/pop_share.xml
@@ -1,19 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#ffffff"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="#ffffff">
 
     <LinearLayout
+        android:id="@+id/ll_share_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:gravity="center">
 
         <LinearLayout
+            android:id="@+id/ll_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:foreground="?android:attr/selectableItemBackground"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/iv_save"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="30dp"
+                android:background="@color/color_FFFFFF"
+                android:src="@mipmap/ic_save" />
+
+            <TextView
+                android:id="@+id/tv_save"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="保存本地" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/ll_friends"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:foreground="?android:attr/selectableItemBackground"
+
             android:orientation="vertical">
 
             <ImageView
@@ -36,7 +68,10 @@
             android:id="@+id/ll_moments"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="120dp"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:foreground="?android:attr/selectableItemBackground"
+
             android:orientation="vertical">
 
             <ImageView
@@ -61,7 +96,10 @@
         android:id="@+id/tv_cancel"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@id/ll_share_container"
         android:gravity="center"
         android:text="取消"
         android:textColor="@drawable/share_tv_cancel"
