--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
 						android:layout_centerInParent="true"
 						android:layout_gravity="center"
 						android:text="@string/app_name"
-						android:textColor="#7594E6"
+						android:textColor="#8666f1"
 						android:textSize="20sp"
 						tools:ignore="RelativeOverlap" />
 
