--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -56,6 +56,7 @@
                     android:layout_marginLeft="50dp"
                     android:background="@drawable/pay_forever"
                     android:text="25/永久"
+                    android:visibility="gone"
                     android:textColor="#ffffff" />
             </LinearLayout>
         </RelativeLayout>
