--- a/app/src/main/res/layout/include_head.xml
+++ b/app/src/main/res/layout/include_head.xml
@@ -5,18 +5,37 @@
     android:layout_height="wrap_content"
     android:background="#DCDCDC">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/tb_head"
+    <RelativeLayout
+        android:id="@+id/tb_head_panel"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="vertical"
-        app:contentInsetLeft="0dp"
-        app:contentInsetStart="0dp"
-        app:navigationIcon="@drawable/ic_back" />
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_head"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="vertical"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            app:navigationIcon="@drawable/ic_back" />
+
+        <ImageView
+            android:id="@+id/tb_right_btn"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/list_new_folder"
+            android:layout_marginEnd="10dp"
+            android:visibility="gone"
+            android:text="新建"/>
+
+    </RelativeLayout>
+
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/tb_head"
+        android:layout_below="@id/tb_head_panel"
         android:background="@color/color_A9A9A9" />
 </RelativeLayout>
