--- a/app/src/main/res/layout/pop_create_dir.xml
+++ b/app/src/main/res/layout/pop_create_dir.xml
@@ -22,7 +22,7 @@
 		android:layout_below="@id/tv_create"
 		android:layout_centerHorizontal="true"
 		android:layout_margin="12dp"
-		android:hint="输入标题" />
+		android:hint="未命名" />
 
 	<LinearLayout
 		android:layout_width="match_parent"
