添加用户协议弹框等

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="color_D7D7D7">#D7D7D7</color>
     <color name="color_000000">#000000</color>
     <color name="color_88BFBD">#88BFBD</color>
+    <color name="color_E6E6E6">#E6E6E6</color>
+    <color name="color_8666f1">#8666f1</color>
+
 </resources>
