--- a/app/src/main/res/layout/fragment_pay.xml
+++ b/app/src/main/res/layout/fragment_pay.xml
@@ -46,8 +46,9 @@
                     android:layout_width="100dp"
                     android:layout_height="44dp"
                     android:background="@drawable/pay_year"
+                    android:foreground="?attr/selectableItemBackground"
                     android:text="9.9/年"
-                    android:textColor="#8666f1" />
+                    android:textColor="@android:color/white" />
 
                 <Button
                     android:id="@+id/btn_forever"
